# Allfeat

./: .dockerignore  .gitignore  .space.kts  Cargo.toml  Dockerfile  HEADER  README.md  azure-pipelines.yml  docker-entrypoint.sh  errors.txt  flake.nix  justfile  node.Dockerfile  rust-toolchain  rust-toolchain.toml  voter_bags.rs  weights.rs
midds/: Cargo.toml
midds/artist/: Cargo.toml
midds/artist/src/: lib.rs
midds/benchmarker/: Cargo.toml
midds/benchmarker/src/: main.rs
midds/musical-work/: Cargo.toml
midds/musical-work/src/: lib.rs
midds/song/: Cargo.toml
midds/song/src/: lib.rs
midds/src/: lib.rs  musical_work.rs  party_identifier.rs  release.rs  track.rs
midds/src/benchmarking/: mod.rs  musical_work.rs  party_identifier.rs  release.rs  track.rs
midds/src/types/: genre.rs  mod.rs  musical_work.rs  party_identifier.rs  release.rs  track.rs  utils.rs
midds/stakeholder/: Cargo.toml
midds/stakeholder/src/: lib.rs
node/: Cargo.toml  build.rs
node/genesis/: harmonie-raw.json  harmonie.json  symphonieV2.json  symphonieV2_raw.json  symphonie_raw.json
node/specs/: melodie.json  melodie_raw.json
node/specs/mainnet/: allfeat.json  allfeat_raw.json
node/src/: apis.rs  benchmarking.rs  chain_spec.rs  cli.rs  client.rs  command.rs  command_helper.rs  eth.rs  lib.rs  main.rs  rpc.rs  rpc_eth.rs  runtime.rs  service.rs
node/src/chain_specs/: account_key.rs  allfeat.rs  genesis.rs  harmonie.rs  helpers.rs  mainnet.rs  melodie.rs  mod.rs  symphonie.json
node/src/rpc/: eth.rs  mod.rs
node/src/service/: frontier.rs  instant_finalize.rs  mod.rs
pallets/artists/: Cargo.toml  README.md
pallets/artists/js/examples/: package.json  tsconfig.json
pallets/artists/src/: benchmarking.rs  functions.rs  lib.rs  macros.rs  migration.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/midds/: Cargo.toml
pallets/midds/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/pom/certification/: Cargo.toml
pallets/pom/certification/src/: lib.rs  mock.rs  tests.rs  types.rs
pallets/token-allocation/: Cargo.toml  README.md
pallets/token-allocation/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
pallets/validator-set/: Cargo.toml
pallets/validator-set/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/validators/: Cargo.toml
pallets/validators/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
precompiles/artists/: Artists.sol  Cargo.toml
precompiles/artists/src/: lib.rs  mock.rs  tests.rs
precompiles/balances-erc20/: Cargo.toml  ERC20.sol  Permit.sol
precompiles/balances-erc20/src/: eip2612.rs  lib.rs  mock.rs  tests.rs
precompiles/nfts/collections/: Cargo.toml  NFTS.sol  README.md
precompiles/nfts/collections/src/: lib.rs  mock.rs  tests.rs
precompiles/nfts/tests/: Cargo.toml
precompiles/nfts/tests/src/: lib.rs
precompiles/nfts/types/: Cargo.toml
precompiles/nfts/types/src/: lib.rs  solidity.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/allfeat/: Cargo.toml  build.rs
runtime/allfeat/src/: constants.rs  identity.rs  impls.rs  lib.rs  precompiles.rs  voter_bags.rs
runtime/allfeat/src/extensions/: artists.rs  mod.rs
runtime/allfeat/src/governance/: mod.rs  origins.rs  tracks.rs
runtime/allfeat/src/weights/: artists.rs  benchmarking.rs  contracts.rs  evm.rs  frame_system.rs  hotfix_sufficients.rs  identity.rs  mod.rs  multisig.rs  nomination-pools.rs  proxy.rs  session.rs  sudo.rs
runtime/harmonie/: Cargo.toml  build.rs
runtime/harmonie/src/: constants.rs  identity.rs  impls.rs  lib.rs  pallets.rs  precompiles.rs  voter_bags.rs
runtime/harmonie/src/extensions/: artists.rs
runtime/harmonie/src/genesis/: development.rs  local.rs  mod.rs
runtime/harmonie/src/midds/: mod.rs
runtime/harmonie/src/migrations/: migrate_evm_prefix_change.rs  migrate_to_poa.rs  mod.rs
runtime/harmonie/src/pallets/: artists.rs  authority_discovery.rs  authorship.rs  babe.rs  bags.rs  balances.rs  elections.rs  ethereum.rs  evm.rs  grandpa.rs  im_online.rs  mmr.rs  multisig.rs  nfts.rs  nomination_pools.rs  offences.rs  proxy.rs  session.rs  staking.rs  system.rs  transaction_payment.rs  utility.rs  validator_set.rs
runtime/harmonie/src/weights/: artist_identity.rs  artists.rs  bags-list.rs  bags_list.rs  balances.rs  benchmarking.rs  contracts.rs  election_provider_multi_phase.rs  evm.rs  identity.rs  im_online.rs  mod.rs  multisig.rs  music_styles.rs  preimage.rs  recovery.rs  scheduler.rs  staking.rs  state_trie_migration.rs  sudo.rs  system.rs  timestamp.rs  utility.rs
runtime/harmonie/tests/: mock.rs  tests.rs
runtime/mainnet/: Cargo.toml  build.rs
runtime/mainnet/src/: apis.rs  benchmarks.rs  constants.rs  lib.rs  pallets.rs
runtime/mainnet/src/genesis/: development.rs  local.rs  mod.rs  staging.rs  token.rs
runtime/mainnet/src/midds/: mod.rs  musical_works.rs  recordings.rs
runtime/mainnet/src/pallets/: ats.rs  aura.rs  authorship.rs  fndn_treasury.rs  grandpa.rs  identity.rs  im_online.rs  meta_tx.rs  mmr.rs  multisig.rs  preimage.rs  proxy.rs  scheduler.rs  session.rs  sudo.rs  system.rs  timestamp.rs  token_allocation.rs  transaction_payment.rs  treasury.rs
runtime/mainnet/src/tests/: fee_report.rs  mod.rs
runtime/mainnet/src/weights/: ats.rs  balances.rs  benchmarking.rs  grandpa.rs  (+18 more)
runtime/melodie/: Cargo.toml  build.rs
runtime/melodie/src/: apis.rs  benchmarks.rs  constants.rs  lib.rs  pallets.rs
runtime/melodie/tests/: mock.rs  tests.rs
runtime/shared/: Cargo.toml
runtime/shared/src/: currency.rs  elections.rs  fee_estimator.rs  genesis_utils.rs  identity.rs  lib.rs  opaque.rs  test.rs
runtime/src/: constants.rs  impls.rs  lib.rs  voter_bags.rs
runtime/symphonie/: Cargo.toml
runtime/symphonie/src/: constants.rs  impls.rs  lib.rs  precompiles.rs
support/: Cargo.toml
support/genres-registry/: Cargo.toml  README.md
support/genres-registry/src/: lib.rs  macros.rs
support/src/: lib.rs  traits.rs  types.rs
utils/generate_bags/: Cargo.toml
utils/generate_bags/src/: main.rs
(+256 files in other folders)
