[workspace]
resolver = "2"
members = [
	"node",
	"runtime/*",
	"primitives",
	"pallets/*",
	"midds/stakeholder",
	"midds/song",
	"support",
	"support/genres-registry",
]

[workspace.package]
authors = ["Allfeat labs. <hello@allfeat.com>"]
edition = "2021"
homepage = "https://allfeat.com"
license = "GPL-3.0"
repository = "https://github.com/allfeat/allfeat"
version = "1.0.0-dev"

[workspace.dependencies]
# Dependencies are split into 2 groups: wasm and client.
# - "wasm" dependencies requires to be no_std compatible, which often requires
#   `default-features = false`. When used in a client-side crate the "std" feature should be enabled
#   there if it exists.
# - "client" dependencies are only used in the client, and thus don't need to be no_std compatible.

# Allfeat (wasm)
allfeat-support = { version = "1.0.0-dev", default-features = false, path = "./support" }
allfeat-primitives = { version = "1.0.0", default-features = false, path = "./primitives" }
pallet-midds = { version = "1.0.0-dev", default-features = false, path = "./pallets/midds" }
genres-registry = { package = "genres-registry", version = "1.0.0-dev", default-features = false, path = "./support/genres-registry" }
# midds-artist = { version = "1.0.0-dev", default-features = false, path = "./midds/artist" }
midds-stakeholder = { version = "1.0.0-dev", default-features = false, path = "./midds/stakeholder" }
midds-song = { version = "1.0.0-dev", default-features = false, path = "./midds/song" }

polkadot-sdk = { version = "0.10.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "stable2412" }
substrate-wasm-builder = { version = "*", git = "https://github.com/paritytech/polkadot-sdk.git", branch = "stable2412" }

# Substrate (wasm)
parity-scale-codec = { version = "3.6.12", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.11.1", default-features = false, features = [
	"derive",
] }
log = { version = "0.4.22", default-features = false }
smallvec = { version = "1.9.0", default-features = false }

pallet-validator-set = { package = "substrate-validator-set", version = "1.1.0", default-features = false, git = "https://github.com/Allfeat/substrate-validator-set.git", branch = "stable2412" }

# Other (wasm)
enumflags2 = { version = "0.7.10", default-features = false }

# Allfeat (client)
shared-runtime = { version = "1.0.0-dev", path = "./runtime/shared", default-features = false }
melodie-runtime = { version = "1.0.0-dev", path = "./runtime/melodie" }

# Other (client)
clap = { version = "4.5.13", features = ["derive"] }
jsonrpsee = { version = "0.24.3", features = ["server", "macros"] }
serde_json = { version = "1.0.132", default-features = false }
futures = "0.3.31"
rand = { version = "0.8.5", default-features = false }

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.ci]
debug = false
incremental = false
inherits = "dev"
opt-level = "z"

[profile.production]
codegen-units = 1
inherits = "release"
lto = true

[profile.release]
# Allfeat runtime requires unwinding.
opt-level = 3
panic = "unwind"
