[package]
name = "midds"
version = "1.0.0-dev"
description = "Substrate compatible MIDDS main crate."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
log = { workspace = true }

# Substrate
frame-support = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Allfeat
allfeat-music-genres = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"log/std",
	"allfeat-music-genres/std"
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
