[package]
authors.workspace = true
description = "Allfeat node."
edition.workspace = true
name = "allfeat"
readme = "README.md"
version.workspace = true
build = "build.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
tokio = { version = "1.40", default-features = false }
async-trait = { version = "0.1.79" }

polkadot-sdk = { workspace = true, features = ["node"] }

allfeat-primitives = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }

# Local Dependencies
melodie-runtime = { workspace = true, optional = true }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std", "all-runtime"]
std = ["melodie-runtime/std", "polkadot-sdk/std"]
all-runtime = ["melodie-runtime"]

runtime-benchmarks = [
	"melodie-runtime?/runtime-benchmarks",
	"polkadot-sdk/runtime-benchmarks",
]

fast-runtime = [
	# allfeat
	"melodie-runtime?/fast-runtime",
]
