[package]
authors.workspace = true
description = "Allfeat node."
edition.workspace = true
name = "allfeat"
readme = "README.md"
version.workspace = true
build = "build.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
tokio = { version = "1.40", default-features = false }
async-trait = { version = "0.1.79" }

allfeat-primitives = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }

# substrate client
sc-basic-authorship = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-babe = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-offchain = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sc-storage-monitor = { workspace = true, default-features = true }
sc-rpc-spec-v2 = { workspace = true, default-features = true }
sc-consensus-slots = { workspace = true, default-features = true }
sc-consensus-babe-rpc = { workspace = true, default-features = true }
sc-consensus-grandpa-rpc = { workspace = true, default-features = true }
sc-authority-discovery = { workspace = true, default-features = true }
sp-consensus-babe = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-genesis-builder = { workspace = true, default-features = true }
sp-offchain = { workspace = true, default-features = true }
sp-session = { workspace = true, default-features = true }
sp-authority-discovery = { workspace = true, default-features = true }
sp-transaction-pool = { workspace = true, default-features = true }
sp-keystore = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }
sp-transaction-storage-proof = { workspace = true, default-features = true }

# substrate primitives
sp-api = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-inherents = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }

# frame and pallets
frame-metadata-hash-extension = { workspace = true, default-features = true }
frame-system = { workspace = true, default-features = true }
pallet-transaction-payment = { workspace = true, default-features = true }
pallet-transaction-payment-rpc = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = { workspace = true, default-features = true }

# Local Dependencies
melodie-runtime = { workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["std", "all-runtime"]
std = ["melodie-runtime?/std"]
all-runtime = ["melodie-runtime"]

runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"melodie-runtime?/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

fast-runtime = [
	# allfeat
	"melodie-runtime?/fast-runtime",
]
