[package]
authors.workspace = true
description = "Allfeat node."
edition.workspace = true
name = "allfeat"
readme = "README.md"
version.workspace = true
build = "build.rs"

[dependencies]
clap = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
log = { workspace = true }

# Memory allocator for improved performance
[target.'cfg(all(target_os = "linux", not(target_env = "musl")))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }

[target.'cfg(target_os = "macos")'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms"] }

allfeat-primitives = { workspace = true }

# These dependencies are used for the node template's RPCs
jsonrpsee = { workspace = true }

# substrate client
sc-basic-authorship = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-client-api = { workspace = true, default-features = true }
sc-consensus = { workspace = true, default-features = true }
sc-consensus-aura = { workspace = true, default-features = true }
sc-consensus-grandpa = { workspace = true, default-features = true }
sc-consensus-grandpa-rpc = { workspace = true, default-features = true }
sc-executor = { workspace = true, default-features = true }
sc-network = { workspace = true, default-features = true }
sc-offchain = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sc-telemetry = { workspace = true, default-features = true }
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }
sc-storage-monitor = { workspace = true, default-features = true }
sc-rpc-spec-v2 = { workspace = true, default-features = true }
sc-consensus-slots = { workspace = true, default-features = true }
sp-consensus-aura = { workspace = true, default-features = true }
sp-consensus-grandpa = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-offchain = { workspace = true, default-features = true }
sp-session = { workspace = true, default-features = true }
sp-transaction-pool = { workspace = true, default-features = true }
sp-consensus = { workspace = true, default-features = true }

# substrate primitives
sp-api = { workspace = true, default-features = true }
sp-block-builder = { workspace = true, default-features = true }
sp-blockchain = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-timestamp = { workspace = true, default-features = true }

# frame and pallets
pallet-transaction-payment-rpc = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true, default-features = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking-cli = { workspace = true, default-features = true }

# Local Dependencies
melodie-runtime = { workspace = true, optional = true }
allfeat-runtime = { workspace = true, optional = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = true }

[features]
default = ["std", "all-runtime"]
std = ["melodie-runtime?/std", "allfeat-runtime?/std"]

# Runtime selection features - use specific features to reduce binary size
all-runtime = ["melodie-runtime", "allfeat-runtime"]
mainnet = ["allfeat-runtime"]
testnet = ["melodie-runtime"]

runtime-benchmarks = [
	"frame-benchmarking-cli/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"melodie-runtime?/runtime-benchmarks",
	"allfeat-runtime?/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]

fast-runtime = [
	"melodie-runtime?/fast-runtime",
	"allfeat-runtime?/fast-runtime",
]

# Production build with logging disabled for better performance
production = [
	"sp-api/disable-logging",
]
