[package]
name = "allfeat-primitives"
version = "1.0.0"
authors = { workspace = true }
description = "Allfeat node/runtime low-level primitives."
edition = "2021"
license = "GPL-3.0"
homepage = "https://allfeat.com"
repository = "https://github.com/Allfeat/Allfeat"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
polkadot-sdk = { workspace = true, features = ["sp-core", "sp-runtime"] }

[features]
default = ["std"]
std = ["polkadot-sdk/std"]
